@@ -1,4 +1,8 @@
-2005-09-08 Maarten Brock <sourceforge.brock AT dse.nl>
+2005-09-10 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* as/mcs51/lkmem.c (summary2): fixed report for absolute areas (bug 1210220)
+
+2005-09-09 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/peeph.def (241.x): fixed bug when comparing generic pointers
 
